--- a/html/zah/NewWeb/Index2.html
+++ b/html/zah/NewWeb/Index2.html
@@ -20,33 +20,8 @@
 </head>
 
 <body>
-  <div class="header">
-    <!-- X Menu-->
-    <div class="container" onclick="myFunction(this)">
-      <div class="bar1"></div>
-      <div class="bar2"></div>
-      <div class="bar3"></div>
-      <!--DropDown Menu-->
-      <div class="topnav">
-        <div id="myLinks">
-          <a href="newIndex.html">News</a>
-          <a href="newIndex.html">Contact</a>
-          <a href="newIndex.html">About</a>
-        </div>
-        <a href="javascript:void(0);" class="container" onclick="myFunction()">
-        </a>
-      </div>
-    </div>
-    <div class="search">
-      <div>
-        <a href="Index2.html"><span class="material-symbols-outlined">home</span>&nbsp;Home</a>
-        <a href="#"><span class="material-symbols-outlined"></span>&nbsp;Weather</a>
-      </div>
-      <div>
-        <input type="text" placeholder="Search...">
-      </div>
-    </div>
-  </div>
+  <div id="headerContainer"></div>
+
   <h3>Breaking News </h3>
   <div class="text">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dictum imperdiet nibh, vel placerat nisl interdum
@@ -114,5 +89,9 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dictum imperdiet nibh, vel placerat nisl interdum
       nec. Donec volutpat hendrerit hendrerit</p>
   </div>
+
+
+  </div>
 </body>
+
 </html>
