--- a/html/cemil/HarryPotter/harrypotterMovies.html
+++ b/html/cemil/HarryPotter/harrypotterMovies.html
@@ -16,40 +16,73 @@
             <source src="Harry Potter Theme Song-Htaj3o3JD8I.webm">
         </audio>
     </div>
+    <div>
+        <ul class="tab">
+            <li><a href="#">Home</a></li>
+            <li><a href="harrypotterMovies.html">Movies</a></li>
+            <li>Actor</li>
+        </ul>
+    </div>
     <hr>
     <h1 class="accordion">Harry Potter und der Stein der Weisen</h1>
     <div class="panel">
-        <p>Der Waisenjunge Harry Potter wächst bei der unfreundlichen Familie seiner Tante auf. An Harrys elftem
-            Geburtstag erfährt er vom Halbriesen Rubeus Hagrid, dass er ein Zauberer ist und seine Eltern von einem
-            bösen Magier namens Lord Voldemort getötet wurden. Beim Versuch, auch den damals einjährigen Harry zu töten,
-            prallte Voldemorts Todeszauber auf wundersame Weise von Harry ab, traf Voldemort und versetzte ihn in einen
-            schwachen und hilflosen Zustand. Dieser Vorfall machte Harry in der Welt der Zauberer sehr bekannt, da er
-            die einzige Person ist, die den Todesfluch je überlebte. Harry tritt seine Ausbildung als Schüler an der
-            Zaubereischule Hogwarts an. Er befreundet sich mit seinen Klassenkameraden Ron Weasley und Hermine Granger.
-            Gemeinsam verhindern sie, dass Voldemort den Stein der Weisen erlangt und so zu neuer Kraft erstarkt.</p>
+        <div class="box">
+            <p>Der Waisenjunge Harry Potter wächst bei der unfreundlichen Familie seiner Tante auf. An Harrys elftem
+                Geburtstag erfährt er vom Halbriesen Rubeus Hagrid, dass er ein Zauberer ist und seine Eltern von einem
+                bösen Magier namens Lord Voldemort getötet wurden. Beim Versuch, auch den damals einjährigen Harry zu
+                töten,
+                prallte Voldemorts Todeszauber auf wundersame Weise von Harry ab, traf Voldemort und versetzte ihn in
+                einen
+                schwachen und hilflosen Zustand. Dieser Vorfall machte Harry in der Welt der Zauberer sehr bekannt, da
+                er
+                die einzige Person ist, die den Todesfluch je überlebte. Harry tritt seine Ausbildung als Schüler an der
+                Zaubereischule Hogwarts an. Er befreundet sich mit seinen Klassenkameraden Ron Weasley und Hermine
+                Granger.
+                Gemeinsam verhindern sie, dass Voldemort den Stein der Weisen erlangt und so zu neuer Kraft
+                erstarkt.</p>
+
+            <div class="cen">
+                <img class="movieImg" src="harry-potter-hogwarts-lantern-castle-wallpaper-preview.jpg"
+                    alt="Stein der Weisen">
+            </div>
+        </div>
     </div>
 
     <h1 class="accordion">Harry Potter und die Kammer des Schreckens</h1>
     <div class="panel">
-        <p>Harry, Ron und Hermine kehren für ihr zweites Schuljahr nach Hogwarts zurück. Dort wurde die Kammer des
-            Schreckens geöffnet, in der ein Unwesen haust, das verschiedene Schüler versteinert. Harry muss sich gegen
-            Vorwürfe wehren, er sei der Erbe Salazar Slytherins, der als einer der vier Schulgründer die Kammer angelegt
-            haben soll. Mit der Hilfe von Ron und Hermine findet Harry die Kammer und tötet das Unwesen, den Basilisken,
-            mit dem Schwert von Gryffindor. Außerdem zerstört er ein Tagebuch, in dem ein Teil von Voldemort konserviert
-            war und mit dessen Hilfe Voldemort andere beeinflusst hatte.</p>
-    </div>
+        <div class="box">
+            <p>Harry, Ron und Hermine kehren für ihr zweites Schuljahr nach Hogwarts zurück. Dort wurde die Kammer des
+                Schreckens geöffnet, in der ein Unwesen haust, das verschiedene Schüler versteinert. Harry muss sich
+                gegen
+                Vorwürfe wehren, er sei der Erbe Salazar Slytherins, der als einer der vier Schulgründer die Kammer
+                angelegt
+                haben soll. Mit der Hilfe von Ron und Hermine findet Harry die Kammer und tötet das Unwesen, den
+                Basilisken,
+                mit dem Schwert von Gryffindor. Außerdem zerstört er ein Tagebuch, in dem ein Teil von Voldemort
+                konserviert
+                war und mit dessen Hilfe Voldemort andere beeinflusst hatte.</p>
+        </div>
 
-    <h1 class="accordion">Harry Potter und der Gefangene von Askaban</h1>
-    <div class="panel">
-        <p>Kurz vor Schulbeginn trifft Harry durch einen Zufall auf den Fahrenden Ritter, der ihn in die Winkelgasse
-            bringt. Dabei erfährt Harry, dass der angebliche Mörder Sirius Black, der Harrys Eltern an Voldemort
-            verraten haben soll, aus dem Zauberergefängnis Askaban ausgebrochen ist, angeblich um Harry zu töten. Das
-            Zaubereiministerium schickt Dementoren nach Hogwarts, weil dort Blacks Erscheinen zu Harrys drittem
-            Schuljahr erwartet wird. Von seinem neuen Lehrer Remus Lupin lernt Harry, sich gegen die gefährlichen
-            Dementoren zu verteidigen. Harry findet heraus, dass Black sein Pate ist, Harrys Eltern stets treu war und
-            diese tatsächlich von Peter Pettigrew verraten wurden. Pettigrew war bisher bekannt als Rons Ratte Krätze.
-            Black war ausgebrochen, um sich an Pettigrew zu rächen. Harry und Hermine verhelfen Black zur Flucht vor dem
-            Zaubereiministerium.</p>
+        <h1 class="accordion">Harry Potter und der Gefangene von Askaban</h1>
+        <div class="panel">
+            <p>Kurz vor Schulbeginn trifft Harry durch einen Zufall auf den Fahrenden Ritter, der ihn in die Winkelgasse
+                bringt. Dabei erfährt Harry, dass der angebliche Mörder Sirius Black, der Harrys Eltern an Voldemort
+                verraten haben soll, aus dem Zauberergefängnis Askaban ausgebrochen ist, angeblich um Harry zu töten.
+                Das
+                Zaubereiministerium schickt Dementoren nach Hogwarts, weil dort Blacks Erscheinen zu Harrys drittem
+                Schuljahr erwartet wird. Von seinem neuen Lehrer Remus Lupin lernt Harry, sich gegen die gefährlichen
+                Dementoren zu verteidigen. Harry findet heraus, dass Black sein Pate ist, Harrys Eltern stets treu war
+                und
+                diese tatsächlich von Peter Pettigrew verraten wurden. Pettigrew war bisher bekannt als Rons Ratte
+                Krätze.
+                Black war ausgebrochen, um sich an Pettigrew zu rächen. Harry und Hermine verhelfen Black zur Flucht vor
+                dem
+                Zaubereiministerium.</p>
+            <div class="cen">
+                <img class="movieImg" src="harry-potter-hogwarts-lantern-castle-wallpaper-preview.jpg"
+                    alt="Stein der Weisen">
+            </div>
+        </div>
     </div>
 
     <h1 class="accordion">Harry Potter und der Feuerkelch</h1>
