--- a/html/philipp/springFrontEnd/index.html
+++ b/html/philipp/springFrontEnd/index.html
@@ -19,6 +19,16 @@
             border-top: 5px solid black;
         }
 
+        button {
+            background-color: rgb(117, 117, 117);
+            color: aliceblue;
+            height: 30px;
+        }
+
+        button:hover {
+            background-color: rgb(160, 158, 158);
+        }
+
         .grid {
             width: 500px;
         }
