--- a/html/aron/abschlussprojekt/Code.html
+++ b/html/aron/abschlussprojekt/Code.html
@@ -15,13 +15,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,900&display=swap" rel="stylesheet">
 </head>
 
-<body onload="pageInit()">
+<body>
 
     <div class="normalBlockContainer">
         <div class="imageContainer">
             <div class="topMenu">
                 <a href="NoHuman.html">
-                    <img class="icon" src="logopro2.png" alt="">
+                    <img class="icon" src="Picture\logopro2.png" alt="">
                 </a>
                 <div class="menuContainer">
                     <div>
@@ -92,6 +92,7 @@
     </div>
     <script src="CodeJavaScript.js"></script>
     <script src="JavaScriptCommon.js"></script>
+    <script>pageInit()</script>
 </body>
 
 </html>
