--- a/html/aron/abschlussprojekt/Struktur.html
+++ b/html/aron/abschlussprojekt/Struktur.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>No Human</title>
+    <title>No Human Struktur</title>
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="StrukturStyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,13 +14,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,900&display=swap" rel="stylesheet">
 </head>
 
-<body onload="pageInit()">
+<body>
 
     <div class="normalBlockContainer">
         <div class="imageContainer">
             <div class="topMenu">
                 <a href="NoHuman.html">
-                    <img class="icon" src="logopro2.png" alt="">
+                    <img class="icon" src="Picture\logopro2.png" alt="">
                 </a>
                 <div class="menuContainer">
                     <div>
@@ -75,6 +75,7 @@
         </div>
     </div>
     <script src="JavaScriptCommon.js"></script>
+    <script>pageInit()</script>
 </body>
 
 </html>
