--- a/html/aron/abschlussprojekt/UberMich.html
+++ b/html/aron/abschlussprojekt/UberMich.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>No Human Über Mich</title>
-    <script src="JavaScriptCommon.js"></script>
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="UberMichStyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,13 +14,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,900&display=swap" rel="stylesheet">
 </head>
 
-<body onload="pageInit()">
+<body>
 
     <div class="normalBlockContainer">
         <div class="imageContainer">
             <div class="topMenu">
                 <a href="NoHuman.html">
-                    <img class="icon" src="logopro2.png" alt="">
+                    <img class="icon" src="Picture\logopro2.png" alt="">
                 </a>
                 <div class="menuContainer">
                     <div>
@@ -59,7 +58,7 @@
                     </div>
                 </td>
                 <td style="vertical-align: bottom;font-size: 0px;"><img class="picture"
-                        src="ktart_justfinethanks_600x600.webp" alt=""></td>
+                        src="Picture\ktart_justfinethanks_600x600.webp" alt=""></td>
             </tr>
         </table>
     </div>
@@ -99,6 +98,7 @@
         </div>
     </div>
     <script src="JavaScriptCommon.js"></script>
+    <script>pageInit()</script>
 </body>
 
 </html>
