--- a/html/aron/abschlussprojekt/NoHuman.html
+++ b/html/aron/abschlussprojekt/NoHuman.html
@@ -14,13 +14,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,900&display=swap" rel="stylesheet">
 </head>
 
-<body onload="pageInit()">
+<body>
 
     <div class="normalBlockContainer">
 
         <div class="topMenu">
             <a href="NoHuman.html">
-                <img class="icon" src="logopro2.png" alt="">
+                <img class="icon" src="Picture\logopro2.png" alt="">
             </a>
 
             <div class="menuContainer">
@@ -40,43 +40,51 @@
             </div>
         </div>
         <div class="imageContainer headerTop" style="vertical-align: bottom;font-size: 0px;">
-            <img class="Logo" src="logoprobig.png" alt="">
-            <img class="bigbgimg" src="742197a8f63b9a3bba4a63a28c4597b2.jpg" alt="">
-            <div class="buttonContainer"><button>PLAY</button></div>
+            <img class="Logo" src="Picture\logoprobig.png" alt="">
+            <img class="bigbgimg" src="Picture\Main_Picture.jpg" alt="">
+            <div class="buttonContainer"><button onclick="location.href='Menu.html'">PLAY</button><br><br>
+            </div>
         </div>
-    </div>
-    <div class="Center">
-        <h2>EINFÜHRUNG</h2>
-        <div class="textBeschreibung1">
-            Dieses JavaScript Point and click Adventur, kann direkt beim Webbrowser ausgeführt werden. Lorem ipsum dolor
-            sit amet,
-            consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-            sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+        <div class="Center">
+            <h2>EINFÜHRUNG</h2>
+            <div class="textBeschreibung1">
+                Dieses JavaScript Point and click Adventur, kann direkt beim Webbrowser ausgeführt werden. Lorem ipsum
+                dolor
+                sit amet,
+                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+                erat,
+                sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+            </div>
+
+            <div class="textBeschreibung2">
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                labore et
+                dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+                Stet
+                clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit
+                amet,
+                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+                erat,
+                sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+                no
+                sea takimata sanctus est Lorem ipsum dolor sit amet.
+            </div>
+
         </div>
 
-        <div class="textBeschreibung2">
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-            dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-            clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-            consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-            sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
-            sea takimata sanctus est Lorem ipsum dolor sit amet.
+
+        <div class="footer1">
+            <div>
+                <p>© 2022 No Human | All rights raserved</p>
+            </div>
+            <div></div>
+
+            <div>
+                <p>Created with love by Aron Darius Redl</p>
+            </div>
         </div>
-
-    </div>
-
-
-    <div class="footer1">
-        <div>
-            <p>© 2022 No Human | All rights raserved</p>
-        </div>
-        <div></div>
-
-        <div>
-            <p>Created with love by Aron Darius Redl</p>
-        </div>
-    </div>
-    <script src="JavaScriptCommon.js"></script>
+        <script src="JavaScriptCommon.js"></script>
+        <script>pageInit()</script>
 
 </body>
 
