about me link in the credits leads to my wip site now

--- a/html/arda/firstsite/SuperKojimaFighter/index.html
+++ b/html/arda/firstsite/SuperKojimaFighter/index.html
@@ -67,7 +67,9 @@
                 subject to
                 change in the future.
                 <br> <br>
-                want to know more about <a href="" class="link">ME?</a>
+                want to know more about <a
+                    href="../personalsite/index.html"
+                    class="link">ME?</a>
             </div>
         </div>
         <script defer src="js/classes.js"></script>
