--- a/html/arda/firstsite/SuperKojimaFighter/menu.html
+++ b/html/arda/firstsite/SuperKojimaFighter/menu.html
@@ -60,7 +60,7 @@
                 subject to
                 change in the future.
                 <br> <br>
-                want to know more about <a href="" class="link">ME?</a>
+                want to know more about <a href="../personalsite/index.html" class="link">ME?</a>
                 </div>
             </div>
         </div>
