we do a little trolling

--- a/html/arda/firstsite/personalsite/index.html
+++ b/html/arda/firstsite/personalsite/index.html
@@ -7,13 +7,15 @@
         <title>hello!</title>
     </head>
     <body>
-        <div>this site is under construction
-
+        <div style="font-size: 100px;">
+            this site is under construction
         </div>
         <div>
-            <img
-                src="https://cdn.pixabay.com/photo/2017/08/07/18/01/construction-manager-2606301_640.jpg"
-                alt=";)" style="height: 300px;">
+            <a href="https://www.youtube.com/watch?v=iik25wqIuFo">
+                <img
+                    src="https://cdn.pixabay.com/photo/2017/08/07/18/01/construction-manager-2606301_640.jpg"
+                    alt=";)" style="height: 300px;">
+            </a>
         </div>
     </body>
 </html>
