--- a/html/aron/abschlussprojekt/webhtml/Code.html
+++ b/html/aron/abschlussprojekt/webhtml/Code.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>No Human Code</title>
-    <link rel="stylesheet" href="common.css">
-    <link rel="stylesheet" href="CodeStyle.css">
+    <link rel="stylesheet" href="../webcss/common.css">
+    <link rel="stylesheet" href="../webcss/CodeStyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
         <div class="imageContainer">
             <div class="topMenu">
                 <a href="NoHuman.html">
-                    <img class="icon" src="Picture\logopro2.png" alt="">
+                    <img class="icon" src="../Picture/logopro2.png" alt="">
                 </a>
                 <div class="menuContainer">
                     <div>
@@ -90,8 +90,8 @@
     <div class="imageContainer">
 
     </div>
-    <script src="CodeJavaScript.js"></script>
-    <script src="JavaScriptCommon.js"></script>
+    <script src="../webjavascript/CodeJavaScript.js"></script>
+    <script src="../webjavascript/JavaScriptCommon.js"></script>
     <script>pageInit()</script>
 </body>
 
