--- a/html/aron/abschlussprojekt/webhtml/Struktur.html
+++ b/html/aron/abschlussprojekt/webhtml/Struktur.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>No Human Struktur</title>
-    <link rel="stylesheet" href="common.css">
-    <link rel="stylesheet" href="StrukturStyle.css">
+    <link rel="stylesheet" href="../webcss/common.css">
+    <link rel="stylesheet" href="../webcss/StrukturStyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
         <div class="imageContainer">
             <div class="topMenu">
                 <a href="NoHuman.html">
-                    <img class="icon" src="Picture\logopro2.png" alt="">
+                    <img class="icon" src="../Picture\logopro2.png" alt="">
                 </a>
                 <div class="menuContainer">
                     <div>
@@ -54,7 +54,7 @@
         <li class=""><a href="#">Grafiken Von der Webside</a></li>
         <li class=""><a href="#">Sturkturen vom Spiel</a></li>
         <li class=""><a href="#">Spiel ablauf</a></li>
-        <li class=""><a href="Storyline zusammenfassung.pdf">Spiel Story</a></li>
+        <li class=""><a href="../pdf/Storyline zusammenfassung.pdf">Spiel Story</a></li>
     </ol>
 
 
@@ -74,7 +74,7 @@
             <p>Created with love by Aron Darius Redl</p>
         </div>
     </div>
-    <script src="JavaScriptCommon.js"></script>
+    <script src="../webjavascript/JavaScriptCommon.js"></script>
     <script>pageInit()</script>
 </body>
 
