--- a/html/aron/abschlussprojekt/gamehtml/Menu.html
+++ b/html/aron/abschlussprojekt/gamehtml/Menu.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="MenuStyle.css">
+    <link rel="stylesheet" href="../gamecss/MenuStyle.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,13 +17,11 @@
     <h1>MENÜ</h1>
 
     <div>
-        <a class="MenuSelection"  href="Game.html">Continue</a>
+        <a class="MenuSelection" href="Game.html">Continue</a>
     </div>
     <div>
         <a class="MenuSelection" href="Game.html">New Game</a>
-
-    
-</Div>
+    </div>
 
 </body>
 
