--- a/html/aron/abschlussprojekt/webhtml/NoHuman.html
+++ b/html/aron/abschlussprojekt/webhtml/NoHuman.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>No Human</title>
-    <link rel="stylesheet" href="common.css">
-    <link rel="stylesheet" href="NoHumanStyle.css">
+    <link rel="stylesheet" href="../webcss/common.css">
+    <link rel="stylesheet" href="../webcss/NoHumanStyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
 
         <div class="topMenu">
             <a href="NoHuman.html">
-                <img class="icon" src="Picture\logopro2.png" alt="">
+                <img class="icon" src="../Picture/logopro2.png" alt="">
             </a>
 
             <div class="menuContainer">
@@ -40,9 +40,9 @@
             </div>
         </div>
         <div class="imageContainer headerTop" style="vertical-align: bottom;font-size: 0px;">
-            <img class="Logo" src="Picture\logoprobig.png" alt="">
-            <img class="bigbgimg" src="Picture\Main_Picture.jpg" alt="">
-            <div class="buttonContainer"><button onclick="location.href='Menu.html'">PLAY</button><br><br>
+            <img class="Logo" src="../Picture/logoprobig.png" alt="">
+            <img class="bigbgimg" src="../Picture/Main_Picture.jpg" alt="">
+            <div class="buttonContainer"><button onclick="location.href='../gamehtml/Menu.html'">PLAY</button><br><br>
             </div>
         </div>
         <div class="Center">
@@ -83,7 +83,7 @@
                 <p>Created with love by Aron Darius Redl</p>
             </div>
         </div>
-        <script src="JavaScriptCommon.js"></script>
+        <script src="../webjavascript/JavaScriptCommon.js"></script>
         <script>pageInit()</script>
 
 </body>
