--- a/html/aron/abschlussprojekt/gamehtml/animWin.html
+++ b/html/aron/abschlussprojekt/gamehtml/animWin.html
@@ -8,50 +8,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Splash&family=Wendy+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Splash&family=Wendy+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../gamecss/GameStyle.css">
     <script type="module" defer src="../gamejavascript/GameJavaScript.js"></script>
     <title>Animation</title>
 
-    <style >
+    <style>
         .youWin {
-            width: 60vw;
-            height: 70vh;
+
+
             display: grid;
             align-content: center;
             justify-content: center;
-            background-color: rgb(255, 223, 120);
-            color: #8d7800;
-            text-shadow: #ffbb00;
-            animation: bigger 6s ease-in-out forwards;
-            margin-left: 340px;
+            width: 80vw;
+            height: 70vh;
+            background-image: url('../Picture/SchriftRolleTransparent2.png');
+            margin-left: 10%;
+            margin-top: 5%;
+            background-size: 100% 100%;
+            background-repeat: no-repeat;
+            color: #000;
+            font-size: 150px;
+            font-family: 'Splash', cursive;
 
-
-        }
-
-        .youWin>p {
-            animation: 3s rotator 6s infinite;
-        }
-
-
-        @keyframes bigger {
-            100% {
-                font-size: 10vw;
-                text-shadow: 0.1vw 0.1vw #9e8100;
-            }
-        }
-
-        @keyframes rotator {
-            0% {
-                transform: rotatey(0turn);
-            }
-
-            50% {
-                transform: rotatey(1turn);
-            }
-
-            100% {
-                transform: rotatey(0turn);
-            }
 
         }
     </style>
