--- a/html/aron/abschlussprojekt/gamehtml/Game.html
+++ b/html/aron/abschlussprojekt/gamehtml/Game.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Splash&family=Wendy+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../gamecss/GameStyle.css">
     <script type="module" defer src="../gamejavascript/GameJavaScript.js"></script>
 
@@ -18,18 +21,24 @@
 
 <body>
     <div class="container">
-        <div>
-            <div id="content"></div>
-            <img class="MainPicture" id="myPicture" style="width:100% ;" src="../Picture/Festung_Kingdom.jpg " alt="">
+
+        <img id="myPicture" style="  object-fit: contain; width: 100%;max-height: 40%;">
+        <div id="content"></div>
+        <div style="position: absolute; bottom: 0px; left: 18.4px; width: 98.08%;">
+            <div>
+                <button clasa=" steurungbtn" style=" display: flex;justify-content: right;">Steuerung</button>
+            </div>
+            <div id="option-buttons" class="btn-grid; " style=" display: flex;justify-content: center;">
+                <button id="button_1" class="btn">Option 1</button>
+                <button id="button_2" class="btn">Option 2</button>
+                <button id="button_3" class="btn">Option 3</button>
+                <button id="button_4" class="btn">Option 4</button>
+            </div>
+            <div id="text" class="MainText">Text</div>
         </div>
-        <div class="MainText" id="text">Text</div>
-        <div id="option-buttons" class="btn-grid">
-            <button class="btn">Option 1</button>
-            <button class="btn">Option 2</button>
-            <button class="btn">Option 3</button>
-            <button class="btn">Option 4</button>
-        </div>
+        </img>
     </div>
+
 </body>
 
 </html>
