--- a/html/aron/abschlussprojekt/gamehtml/Game.html
+++ b/html/aron/abschlussprojekt/gamehtml/Game.html
@@ -24,7 +24,7 @@
 
         <img id="myPicture">
         <div id="content"></div>
-        <div style="position: absolute; bottom: 0px; left: 18.4px; width: 98.2%;">
+        <div style="position: absolute; bottom: 0px;  width: 100%;">
             <div id="option-buttons" class="btn-grid; " style=" display: flex;justify-content: center;">
                 <button id="button_1" class="btn">Option 1</button>
                 <button id="button_2" class="btn">Option 2</button>
@@ -45,3 +45,4 @@
 </body>
 
 </html>
+<!-- left: 18.4px; width: 98.2%;" -->
